feat: tp2 anexo ej3 CompletableFutureTest
missing when_complete_exceptionally()